--- a/Windows/package.json
+++ b/Windows/package.json
@@ -5,7 +5,6 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "prebuild": "node copy-ffmpeg.js",
     "build": "electron-builder --win --x64 --config.nsis.differentialPackage=false --config.win.icon=assets/website-icon.png --config.asar=true",
     "build-installer": "electron-builder --win nsis --x64 --config.nsis.differentialPackage=false",
     "build-portable": "electron-builder --win portable --x64 --config.nsis.differentialPackage=false",
@@ -13,10 +12,7 @@
     "build-all": "npm run build-installer && npm run build-portable",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "package-win": "electron-packager . PulseGuardAgent --platform=win32 --arch=x64 --out=dist --overwrite --asar --extra-resource=node_modules/electron/dist/ffmpeg.dll --extra-resource=node_modules/ffmpeg-static/ffmpeg.exe",
-    "postinstall": "electron-builder install-app-deps",
-    "install-service": "node ./install-service.js install",
-    "uninstall-service": "node ./uninstall-service.js uninstall"
+    "postinstall": "electron-builder install-app-deps"
   },
   "author": "PulseGuard",
   "license": "MIT",
@@ -29,8 +25,8 @@
     "auto-launch": "^5.0.5",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "ffmpeg-static": "^5.2.0",
     "multer": "^2.0.1",
+    "node-windows": "^1.0.0-beta.8",
     "systeminformation": "^5.18.10"
   },
   "build": {
@@ -38,9 +34,6 @@
     "productName": "PulseGuard Agent",
     "artifactName": "PulseGuardAgent-${version}.${ext}",
     "asar": true,
-    "asarUnpack": [
-      "node_modules/ffmpeg-static/**/*"
-    ],
     "buildDependenciesFromSource": true,
     "nodeGypRebuild": false,
     "npmRebuild": false,
@@ -72,9 +65,6 @@
         }
       ],
       "icon": "assets/website-icon.png",
-      "extraResources": [
-        "node_modules/ffmpeg-static/**/*"
-      ],
       "signAndEditExecutable": false,
       "signDlls": false,
       "artifactName": "PulseGuardAgent-${version}.${ext}"
@@ -93,16 +83,6 @@
     "portable": {
       "artifactName": "PulseGuardAgent-Portable-${version}.exe",
       "requestExecutionLevel": "admin"
-    },
-    "extraResources": [
-      {
-        "from": "node_modules/electron/dist/ffmpeg.dll",
-        "to": "ffmpeg.dll"
-      },
-      {
-        "from": "node_modules/ffmpeg-static/ffmpeg.exe",
-        "to": "ffmpeg.exe"
-      }
-    ]
+    }
   }
 }
